adding brew display with simple animation

--- a/public/index.html
+++ b/public/index.html
@@ -748,7 +748,7 @@
         </div>
         <div class="content">
             <div class="list-th  col-grid">
-                <a href="#brew-list">Date |</a>
+                <a href="#brew-list">Date</a>
                 <a href="#brew-list">Coffee</a>
                 <a href="#brew-list">Roaster</a>
                 <a href="#brew-list">Process</a>
@@ -766,29 +766,96 @@
                                 <p>Natural</p>
                                 <p>Colombia</p>
                                 <p>5.0</p>
+                                <div class="down-arrow arrow"></div>
                             </div>
                         </button>
                     </h2>
                     <div class="ac-panel">
-                        <div class="brew-detail-info-wrapper">
-                            <figure class="flex-item">
+                        <div class="brew-detail-info-wrapper col-grid">
+                            <figure class="grid-item">
                                 <img src="src/images/hero-image.png" alt="">
                             </figure>
-                            <div class="flex-item">
+                            <div class="grid-item">
                                 <h3>Preparation.</h3>
+                                <div class="info-row">
+                                    <span class="info-item-label">Dripper:</span>
+                                    <span class="info-item-value">Origami</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Grinder:</span>
+                                    <span class="info-item-value">Conmandante C40</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Grinder Setting:</span>
+                                    <span class="info-item-value">24</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Coffee Amount:</span>
+                                    <span class="info-item-value">15 grams</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Recipe Link:</span>
+                                    <span class="info-item-value">None</span>
+                                </div>
                             </div>
-                            <div class="flex-item">
+                            <div class="grid-item">
                                 <h3>Brewing.</h3>
+                                <div class="info-row">
+                                    <span class="info-item-label">Water Temperature:</span>
+                                    <span class="info-item-value">92°C</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Blooming Time:</span>
+                                    <span class="info-item-value">30’’</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Total Brew Time:</span>
+                                    <span class="info-item-value">1’45’’</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Water Amount:</span>
+                                    <span class="info-item-value">225 grams</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Brew Ratio:</span>
+                                    <span class="info-item-value">1:15</span>
+                                </div>
                             </div>
-                            <div class="flex-item">
+                            <div class="grid-item">
                                 <h3>Tasting.</h3>
+                                <div class="info-col">
+                                    <div class="info-row">
+                                        <span class="info-item-label">Coffee Age:</span>
+                                        <span class="info-item-value">6 Days</span>
+                                    </div>
+                                    <div class="info-row">
+                                        <span class="info-item-label">Beverage Amount:</span>
+                                        <span class="info-item-value">190 grams</span>
+                                    </div>
+                                    <div class="info-row special-row">
+                                        <span class="info-item-label">Tasting Notes:</span>
+                                        <span class="chips info-item-value">Mango</span>
+                                        <span class="chips info-item-value">Kiwi</span>
+                                        <span class="chips info-item-value">Strawberry</span>
+                                        <span class="chips info-item-value">Mango</span>
+                                        <span class="chips info-item-value">Kiwi</span>
+                                        <span class="chips info-item-value">Strawberry</span>
+                                    </div>
+                                </div>
+                                <div class="info-col">
+                                    <div class="info-row special-row">
+                                        <span class="info-item-label">Note:</span>
+                                        <span class="info-item-value text-area">Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                                    </div>
+                                </div>
                             </div>
-                            <button class="flex-item fill">Delete</button>
+                            <div class="grid-item">
+                                <button class="black-fill white-border fill-in">Delete</button>
+                            </div>
                         </div>
                     </div>
                 </article>
-
-                <article class="ac">
+                <article class="ac brew-item">
                     <h2 class="ac-header">
                         <button type="button" class="ac-trigger">
                             <div class="brew-basic-info-wrapper col-grid">
@@ -798,22 +865,195 @@
                                 <p>Natural</p>
                                 <p>Colombia</p>
                                 <p>5.0</p>
+                                <div class="down-arrow arrow"></div>
                             </div>
                         </button>
                     </h2>
                     <div class="ac-panel">
-                        <p class="ac-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="brew-detail-info-wrapper col-grid">
+                            <figure class="grid-item">
+                                <img src="src/images/hero-image.png" alt="">
+                            </figure>
+                            <div class="grid-item">
+                                <h3>Preparation.</h3>
+                                <div class="info-row">
+                                    <span class="info-item-label">Dripper:</span>
+                                    <span class="info-item-value">Origami</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Grinder:</span>
+                                    <span class="info-item-value">Conmandante C40</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Grinder Setting:</span>
+                                    <span class="info-item-value">24</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Coffee Amount:</span>
+                                    <span class="info-item-value">15 grams</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Recipe Link:</span>
+                                    <span class="info-item-value">None</span>
+                                </div>
+                            </div>
+                            <div class="grid-item">
+                                <h3>Brewing.</h3>
+                                <div class="info-row">
+                                    <span class="info-item-label">Water Temperature:</span>
+                                    <span class="info-item-value">92°C</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Blooming Time:</span>
+                                    <span class="info-item-value">30’’</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Total Brew Time:</span>
+                                    <span class="info-item-value">1’45’’</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Water Amount:</span>
+                                    <span class="info-item-value">225 grams</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Brew Ratio:</span>
+                                    <span class="info-item-value">1:15</span>
+                                </div>
+                            </div>
+                            <div class="grid-item">
+                                <h3>Tasting.</h3>
+                                <div class="info-col">
+                                    <div class="info-row">
+                                        <span class="info-item-label">Coffee Age:</span>
+                                        <span class="info-item-value">6 Days</span>
+                                    </div>
+                                    <div class="info-row">
+                                        <span class="info-item-label">Beverage Amount:</span>
+                                        <span class="info-item-value">190 grams</span>
+                                    </div>
+                                    <div class="info-row special-row">
+                                        <span class="info-item-label">Tasting Notes:</span>
+                                        <span class="chips info-item-value">Mango</span>
+                                        <span class="chips info-item-value">Kiwi</span>
+                                        <span class="chips info-item-value">Strawberry</span>
+                                        <span class="chips info-item-value">Mango</span>
+                                        <span class="chips info-item-value">Kiwi</span>
+                                        <span class="chips info-item-value">Strawberry</span>
+                                    </div>
+                                </div>
+                                <div class="info-col">
+                                    <div class="info-row special-row">
+                                        <span class="info-item-label">Note:</span>
+                                        <span class="info-item-value text-area">Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="grid-item">
+                                <button class="black-fill white-border fill-in">Delete</button>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="ac brew-item">
+                    <h2 class="ac-header">
+                        <button type="button" class="ac-trigger">
+                            <div class="brew-basic-info-wrapper col-grid">
+                                <p>25/04/2023</p>
+                                <p>Moon Geisha</p>
+                                <p>Jibbithelittles</p>
+                                <p>Natural</p>
+                                <p>Colombia</p>
+                                <p>5.0</p>
+                                <div class="down-arrow arrow"></div>
+                            </div>
+                        </button>
+                    </h2>
+                    <div class="ac-panel">
+                        <div class="brew-detail-info-wrapper col-grid">
+                            <figure class="grid-item">
+                                <img src="src/images/hero-image.png" alt="">
+                            </figure>
+                            <div class="grid-item">
+                                <h3>Preparation.</h3>
+                                <div class="info-row">
+                                    <span class="info-item-label">Dripper:</span>
+                                    <span class="info-item-value">Origami</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Grinder:</span>
+                                    <span class="info-item-value">Conmandante C40</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Grinder Setting:</span>
+                                    <span class="info-item-value">24</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Coffee Amount:</span>
+                                    <span class="info-item-value">15 grams</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Recipe Link:</span>
+                                    <span class="info-item-value">None</span>
+                                </div>
+                            </div>
+                            <div class="grid-item">
+                                <h3>Brewing.</h3>
+                                <div class="info-row">
+                                    <span class="info-item-label">Water Temperature:</span>
+                                    <span class="info-item-value">92°C</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Blooming Time:</span>
+                                    <span class="info-item-value">30’’</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Total Brew Time:</span>
+                                    <span class="info-item-value">1’45’’</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Water Amount:</span>
+                                    <span class="info-item-value">225 grams</span>
+                                </div>
+                                <div class="info-row">
+                                    <span class="info-item-label">Brew Ratio:</span>
+                                    <span class="info-item-value">1:15</span>
+                                </div>
+                            </div>
+                            <div class="grid-item">
+                                <h3>Tasting.</h3>
+                                <div class="info-col">
+                                    <div class="info-row">
+                                        <span class="info-item-label">Coffee Age:</span>
+                                        <span class="info-item-value">6 Days</span>
+                                    </div>
+                                    <div class="info-row">
+                                        <span class="info-item-label">Beverage Amount:</span>
+                                        <span class="info-item-value">190 grams</span>
+                                    </div>
+                                    <div class="info-row special-row">
+                                        <span class="info-item-label">Tasting Notes:</span>
+                                        <span class="chips info-item-value">Mango</span>
+                                        <span class="chips info-item-value">Kiwi</span>
+                                        <span class="chips info-item-value">Strawberry</span>
+                                        <span class="chips info-item-value">Mango</span>
+                                        <span class="chips info-item-value">Kiwi</span>
+                                        <span class="chips info-item-value">Strawberry</span>
+                                    </div>
+                                </div>
+                                <div class="info-col">
+                                    <div class="info-row special-row">
+                                        <span class="info-item-label">Note:</span>
+                                        <span class="info-item-value text-area">Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="grid-item">
+                                <button class="black-fill white-border fill-in">Delete</button>
+                            </div>
+                        </div>
                     </div>
                 </article>
 
-                <article class="ac">
-                    <h2 class="ac-header">
-                        <button type="button" class="ac-trigger">Lorem ipsum dolor sit amet.</button>
-                    </h2>
-                    <div class="ac-panel">
-                        <p class="ac-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                </article>
             </div>
         </div>
         <div id="add-brew-dialog" class="dialog-container" aria-hidden="true" role="alertdialog">
